# PluginSystem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  clean_build.sh
.cache/clangd/index/: DependencyResolver.cpp.95B75E21BBF5C99A.idx  DependencyResolver.h.099DD645A1BC6D2B.idx  IPlugin.h.5B11E025D46D1F57.idx  PluginExport.h.69AA5D9FA405B430.idx  PluginInfo.h.0AC0E3E238B5F99A.idx  PluginManager.cpp.64EA4B805DD3A390.idx  PluginManager.h.FD4A320F3EF1058D.idx  ScriptObjectWrapper.cpp.D8A3EEA8C2174A81.idx  ScriptObjectWrapper.h.0A8D4D0CF87CC827.idx
.trae/: TODO.md
.trae/documents/: CMake构建系统改进方案.md
cmake/: PluginSystemConfig.cmake.in
docs/: PluginTemplate.md
examples/: CMakeLists.txt  lua_example.lua  python_example.py  rendering_example.cpp
src/: CMakeLists.txt
src/PluginApp/: CMakeLists.txt
src/PluginApp/src/: Application.cpp  Application.h  main.cpp
src/PluginCore/: CMakeLists.txt
src/PluginCore/include/: DependencyResolver.h  IPlugin.h  PluginExport.h  PluginInfo.h  PluginManager.h  ScriptObjectWrapper.h
src/PluginCore/src/: DependencyResolver.cpp  PluginManager.cpp  ScriptObjectWrapper.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/LogPlugin/: CMakeLists.txt
src/Plugins/LogPlugin/include/: LogPlugin.h  LogPluginExport.h
src/Plugins/LogPlugin/src/: LogPlugin.cpp
src/Plugins/MathPlugin/: CMakeLists.txt
src/Plugins/MathPlugin/include/: MathPlugin.h  MathPluginExport.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
src/Plugins/MathPlugin/src/: MathPlugin.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Plugins/RenderingPlugin/: CMakeLists.txt
src/Plugins/RenderingPlugin/LLGLRenderingPlugin/: Build.cmake  CMakeLists.txt
src/Plugins/RenderingPlugin/LLGLRenderingPlugin/include/: Plugin.h  PluginExport.h
src/Plugins/RenderingPlugin/LLGLRenderingPlugin/src/: LLGLRenderingPlugin.cpp
src/Plugins/RenderingPlugin/include/: GeometryGenerator.h  MathTypes.h  RenderCommands.h  RenderingPlugin.h  RenderingPluginBase.h  RenderingPluginExport.h  RenderingPlugin_backup.h  RenderingSystem.h  ResourceManager.h  ShaderManager.h
src/Plugins/RenderingPlugin/src/: GeometryGenerator.cpp  RenderCommands.cpp  RenderingPlugin.cpp  RenderingSystem.cpp  ResourceManager.cpp  ShaderManager.cpp
src/Plugins/ScriptPlugin/: CMakeLists.txt
src/Plugins/ScriptPlugin/LuaPlugin/: CMakeLists.txt  LuaBuild.cmake
src/Plugins/ScriptPlugin/LuaPlugin/include/: LuaPlugin.h  LuaPluginExport.h
src/Plugins/ScriptPlugin/LuaPlugin/src/: LuaPlugin.cpp
src/Plugins/ScriptPlugin/PythonPlugin/: CMakeLists.txt  PythonBuild.cmake
src/Plugins/ScriptPlugin/PythonPlugin/include/: PythonPlugin.h  PythonPluginExport.h
src/Plugins/ScriptPlugin/PythonPlugin/src/: PythonPlugin.cpp
src/Plugins/ScriptPlugin/include/: ScriptPlugin.h  ScriptPluginExport.h
src/Plugins/ScriptPlugin/src/: ScriptPlugin.cpp
tests/: CMakeLists.txt  LogPluginTests.cpp  MathPluginTests.cpp  PluginCoreTests.cpp  ScriptPluginTests.cpp  log_plugin_test.cpp  manual_test.cpp  math_plugin_test.cpp  plugin_manager_test.cpp  rendering_plugin_test.cpp  script_object_wrapper_test.cpp  script_plugin_test.cpp
